RESOLVED FIXED21420
> 180 degree rotations don't work
https://bugs.webkit.org/show_bug.cgi?id=21420
Summary > 180 degree rotations don't work
Chris Marrin
Reported 2008-10-06 17:16:40 PDT
See attached test case. The logic in the KeyframeAnimation ctor computes the m_transformFunctionListValid too early, causing it to always be false. This causes the interpolator to always interpolate using a matrix, which can't represent rotations > 180 degrees. Patch on the way
Attachments
Test case showing bug (2.36 KB, text/html)
2008-10-06 17:20 PDT, Chris Marrin
no flags
Patch, including LayoutTest file (5.22 KB, patch)
2008-10-07 10:14 PDT, Chris Marrin
no flags
replacement patch with a more descriptive comment (5.29 KB, patch)
2008-10-07 10:36 PDT, Chris Marrin
mitz: review+
Chris Marrin
Comment 1 2008-10-06 17:20:28 PDT
Created attachment 24134 [details] Test case showing bug
Chris Marrin
Comment 2 2008-10-07 10:14:05 PDT
Created attachment 24148 [details] Patch, including LayoutTest file
Chris Marrin
Comment 3 2008-10-07 10:36:31 PDT
Created attachment 24150 [details] replacement patch with a more descriptive comment
mitz
Comment 4 2008-10-09 10:45:07 PDT
Comment on attachment 24150 [details] replacement patch with a more descriptive comment r=me
Chris Marrin
Comment 5 2008-10-09 16:04:36 PDT
Sending LayoutTests/ChangeLog Adding LayoutTests/animations/big-rotation-expected.txt Adding LayoutTests/animations/big-rotation.html Sending WebCore/ChangeLog Sending WebCore/page/animation/KeyframeAnimation.cpp Transmitting file data ..... Committed revision 37451.
Note You need to log in before you can comment on or make changes to this bug.