2008-10-09  Chris Marrin  <cmarrin@apple.com>

Reviewed by Dan Bernstein.

        Fixed > 180 degree rotation bug
        Ensure that validateTransformFunctionList() is called after updating keyframe styles

        https://bugs.webkit.org/show_bug.cgi?id=21420

        Test: animations/big-rotation.html

        * page/animation/KeyframeAnimation.cpp:
        (WebCore::KeyframeAnimation::KeyframeAnimation):



Canonical link: https://commits.webkit.org/29696@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@37451 268f45cc-cd09-0410-ab3c-d52691b4dbfc