WebCore/page/animation/KeyframeAnimation.cpp
@@ -44,9 +44,6 @@ KeyframeAnimation::KeyframeAnimation(const Animation* animation, RenderObject* r
     , m_index(index)
     , m_unanimatedStyle(0)
 {
-    // Set the transform animation list
-    validateTransformFunctionList();
-    
     if (unanimatedStyle) {
         const_cast<RenderStyle*>(unanimatedStyle)->ref();
         m_unanimatedStyle = unanimatedStyle;
@@ -55,6 +52,9 @@ KeyframeAnimation::KeyframeAnimation(const Animation* animation, RenderObject* r
     // Get the keyframe RenderStyles
     if (m_object && m_object->element() && m_object->element()->isElementNode())
         m_object->document()->styleSelector()->keyframeStylesForAnimation(static_cast<Element*>(m_object->element()), unanimatedStyle, m_keyframes);
+
+    // Update the m_transformFunctionListValid flag based on whether the function lists in the keyframes match.
+    validateTransformFunctionList();
 }
 
 KeyframeAnimation::~KeyframeAnimation()
